Add entity extraction step using SPIED, several refactorings and changes