@@ -42,7 +42,7 @@ final class TppLemmatizationProcessingStep extends AbstractTppProcessingStep {
 		super(
 			// Additional mandatory and optional parameters, with their validation function
 			Map.of(
-				MODEL_PROCESSING_STEP_PARAMETER_NAME, (final String value) -> value != null && !value.trim().isEmpty()
+				MODEL_PROCESSING_STEP_PARAMETER_NAME, (final String value) -> value != null && !value.isBlank()
 			),
 			// Additional mandatory parameters
 			Set.of(MODEL_PROCESSING_STEP_PARAMETER_NAME),
